# mojito

./: Makefile.am  configure.ac
mojito-client/: mojito-client-service.c
mojito-keyfob/: Makefile.am  mojito-keyfob-facebook.c  mojito-keyfob.h
mojito-keystore/: mojito-keystore.c
services/: Makefile.am
services/facebook/: Makefile.am  facebook.c  facebook.h  facebook.keys.in  module.c
services/flickr/: mojito-service-flickr.c
services/myspace/: myspace.c
services/youtube/: Makefile.am  module.c  youtube.c  youtube.h  youtube.keys.in
