SUBDIRS = dummy skeleton

if WITH_FLICKR
SUBDIRS += flickr
endif

if WITH_LASTFM
SUBDIRS += lastfm
endif

if WITH_TWITTER
SUBDIRS += twitter
endif

if WITH_MYSPACE
SUBDIRS += myspace
endif

if WITH_DIGG
SUBDIRS += digg
endif

if WITH_FACEBOOK
SUBDIRS += facebook
endif

if WITH_YOUTUBE
SUBDIRS += youtube
endif
